# multi-agent-equity-fundamental-analysis

./: .env.example  .gitignore  LICENSE  Makefile  README.md
data/eval-reports/: ten_ticker_single_prompt_dataset.json  ten_ticker_single_prompt_eval.csv  ten_ticker_single_prompt_eval.progress.jsonl  ten_ticker_single_prompt_summary.json  ten_ticker_ten_prompt_dataset.json  ten_ticker_ten_prompt_eval.csv  ten_ticker_ten_prompt_eval.progress.jsonl  ten_ticker_ten_prompt_summary.json
data/results/: .gitignore
docs/architecture/: architecture-diagrams.md  uml-diagrams.md
services/ai-research-team-service/: pyproject.toml  requirements.txt
services/ai-research-team-service/app/: main.py
services/ai-research-team-service/app/agents/: engine.py  langgraph_workflow.py  news_clients.py
services/ai-research-team-service/app/api/: routes.py
services/ai-research-team-service/app/core/: config.py
services/ai-research-team-service/app/eval/: runner.py  svg_reports.py
services/ai-research-team-service/app/eval/datasets/: analyst_eval_set.json  analyst_questions_top10.json
services/ai-research-team-service/app/retrieval/: indexer.py
services/ai-research-team-service/app/retrieval/embeddings/: __init__.py  base.py  factory.py  openai_embedder.py
services/ai-research-team-service/app/risk/: guardrails.py
services/ai-research-team-service/app/schemas/: contracts.py
services/ai-research-team-service/test/: run_single_ticker_eval.py  run_ten_ticker_eval.py  run_ten_ticker_ten_prompt_eval.py
services/demo-ui/: app.py
services/ingestion-service/: build.gradle.kts
(+51 files in other folders)
